[maven-release-plugin] prepare for next development iteration

--- a/httpcache4j-api/pom.xml
+++ b/httpcache4j-api/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.codehaus.httpcache4j</groupId>
     <artifactId>httpcache4j</artifactId>
-    <version>3.0</version>
+    <version>3.1-SNAPSHOT</version>
   </parent>
   <artifactId>httpcache4j-api</artifactId>
   <packaging>jar</packaging>
