--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <groupId>org.codehaus.httpcache4j</groupId>
   <artifactId>httpcache4j</artifactId>
   <packaging>pom</packaging>
-  <version>3.0</version>
+  <version>3.1-SNAPSHOT</version>
   <name>Java HTTP cache</name>
   <url>http://httpcache4j.codehaus.org</url>
   <description>HttpCache4j is a library for caching HTTP requests from a client.</description>
@@ -297,9 +297,9 @@
 
 
   <scm>
-    <connection>scm:svn:http://svn.codehaus.org/httpcache4j/tags/httpcache4j-3.0</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/httpcache4j/tags/httpcache4j-3.0</developerConnection>
-    <url>http://fisheye.codehaus.org/browse/httpcache4j/tags/httpcache4j-3.0</url>
+    <connection>scm:svn:http://svn.codehaus.org/httpcache4j/trunk</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/httpcache4j/trunk</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/httpcache4j/trunk</url>
   </scm>
 
   <distributionManagement>
