--- a/resolvers/resolvers-commons-httpclient/pom.xml
+++ b/resolvers/resolvers-commons-httpclient/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.codehaus.httpcache4j.resolvers</groupId>
     <artifactId>resolvers</artifactId>
-    <version>3.0</version>
+    <version>3.1-SNAPSHOT</version>
   </parent>
   <artifactId>resolvers-commons-httpclient</artifactId>
   <packaging>jar</packaging>
