--- a/storage/storage-file/pom.xml
+++ b/storage/storage-file/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.codehaus.httpcache4j.storage</groupId>
     <artifactId>storage</artifactId>
-    <version>3.0</version>
+    <version>3.1-SNAPSHOT</version>
   </parent>
   <artifactId>storage-file</artifactId>
   <packaging>jar</packaging>
