--- a/storage/storage-h2/pom.xml
+++ b/storage/storage-h2/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.codehaus.httpcache4j.storage</groupId>
     <artifactId>storage</artifactId>
-    <version>3.0</version>
+    <version>3.1-SNAPSHOT</version>
   </parent>
   <artifactId>storage-h2</artifactId>
   <packaging>jar</packaging>
